--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "license": "MIT",
   "dependencies": {
-    "solid-js": "^1.7.8",
-    "@tauri-apps/api": "^1.4.0"
+    "@tauri-apps/api": "^1.4.0",
+    "solid-js": "^1.7.8"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.4.0",
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.5.0",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.4",
-    "vite-plugin-solid": "^2.7.0",
-    "@tauri-apps/cli": "^1.4.0"
+    "vite-plugin-solid": "^2.7.0"
   }
 }
