--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,10 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "baseUrl": ".",
+  "paths": {
+    "@pages/": ["./src/pages/*"],
+    "@components/": ["./src/components/*"]
+  },
   "references": [{ "path": "./tsconfig.node.json" }]
 }
