--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "format": "prettier --write ."
   },
   "license": "MIT",
   "dependencies": {
@@ -17,8 +18,8 @@
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.5.0",
     "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.4",
