--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@solidjs/router": "^0.8.2",
     "@tauri-apps/api": "^1.4.0",
     "firebase": "^10.1.0",
     "solid-js": "^1.7.8",
