--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@solidjs/router": "^0.8.2",
     "@tauri-apps/api": "^1.4.0",
+    "@thisbeyond/solid-select": "^0.14.0",
     "firebase": "^10.1.0",
     "solid-js": "^1.7.8",
     "solid-toast": "^0.5.0"
